@@ -24,13 +24,14 @@ resource "aws_cloudfront_distribution" "s3_distribution" {
   comment             = var.cdn_comment
   default_root_object = "index.html"
 
+# ToDo: add logging
 #  logging_config {
 #    include_cookies = false
 #    bucket          = "mylogs.s3.amazonaws.com"
 #    prefix          = "myprefix"
 #  }
 
-#  aliases = ["sample.alias.com"]
+  aliases = [ var.aliases ]
 
   default_cache_behavior {
     allowed_methods  = ["DELETE", "GET", "HEAD", "OPTIONS", "PATCH", "POST", "PUT"]
@@ -60,6 +61,12 @@ resource "aws_cloudfront_distribution" "s3_distribution" {
   }
 
   viewer_certificate {
-    cloudfront_default_certificate = true
+    # Enable for development mode. `cloudfront_default_certificate=true`
+    # cloudfront_default_certificate = true
+    cloudfront_default_certificate = var.mount_cloudfront_default_certificate
+    # acm_certificate_arn = aws_acm_certificate.website_cert.arn
+    acm_certificate_arn = var.aws_acm_certificate_arn
+    ssl_support_method = "sni-only"
+    # minimum_protocol_version = "TLSv1.2_2019"
   }
 }
