@@ -1,6 +1,29 @@
+variable "top_level_domain_name" {
+  type = string
+  description = <<EOT
+Top level domain name, written as 'domain.example.com.'
+Will be used to fetch the hosted zone id.
+EOT
+}
+
+variable "domain_name" {
+  type = string
+  description = "Domain desired for the target website to host."
+}
+
 variable "region" {
   type = string
   description = "Region where the AWS provider will be configured and deployed"
+}
+
+variable "environment" {
+  type = string
+  description = "'prod' or 'non-prod'"
+}
+
+variable "aliases" {
+  type = string
+  description = "Extra CNAMEs (alternate domain names), if any, for this distribution."
 }
 
 variable "s3_bucket_id" {
@@ -15,6 +38,12 @@ variable "s3_bucket_regional_domain_name" {
   description = "Regional domain name for the target bucket."
 }
 
+variable "mount_cloudfront_default_certificate" {
+  type = bool
+  default = false
+  description = "Wether to mount CloudFront DNS certificate -for development-"
+}
+
 variable "s3_origin_path" {
   type = string
   default = "build/"
@@ -23,7 +52,7 @@ variable "s3_origin_path" {
 
 variable "cdn_comment" {
   type = string
-  description = "A mandatory comment to identify the CDN distribution"
+  description = "Any comments you want to include about the distribution"
 }
 
 variable "cdn_origin_access_control_name" {
@@ -37,8 +66,13 @@ variable "cdn_origin_access_control_comment" {
 }
 
 variable "country_blacklist" {
-  type = list(string)
   # https://en.wikipedia.org/wiki/List_of_ISO_3166_country_codes
+  type = list(string)
   default = ["CN", "RU", "PK", "IN", "KP" ]
   description = "A list of countries to blacklist, in the form of "
+}
+
+variable "aws_acm_certificate_arn" {
+  type = string
+  description = "An ARN for a certificate, it must be created on the 'us-east-1' region."
 }
