@@ -1,16 +1,26 @@
-variable "domain_name" {
+variable "top_level_domain_name" {
   type = string
-  description = "Base domain name, written as 'domain.example.com.'"
+  description = <<EOT
+Top level domain name, written as 'domain.example.com.'
+Will be used to fetch the hosted zone id.
+EOT
 }
 
-variable "alias_cloudfront_name" {
+variable "domain_name" {
   type = string
-  description = "Cloudfront distribution domain name, I suspect"
+  description = <<EOT
+Final domain name of the certificate.
+A DNS record for "www.$\{value\}" will be also created.
+EOT
 }
 
 variable "alias_cloudfront_zone_id" {
   type = string
-  description = "The Cloudfront Zone ID"
+  default = "Z2FDTNDATAQYW2"
+  description = <<EOT
+CloudFront distribution hosted zone ID.
+This value must not be changed when using CloudFront domain for development.
+EOT
 }
 
 variable "environment" {
